# vi_slam

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
.github/workflows/: ci.yml  docs.yml
android/: .gitignore  MANUAL_TESTING.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/vi/slam/android/data/: DataManagerIntegrationTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vi/slam/android/: MainActivity.kt
android/app/src/main/java/com/vi/slam/android/calibration/: CalibrationExporter.kt  CalibrationModels.kt  CalibrationVerifier.kt  ExtrinsicCalibrator.kt  ICalibrationCapture.kt  IntrinsicCalibrator.kt  README.md  TimeOffsetEstimator.kt
android/app/src/main/java/com/vi/slam/android/camera/: Camera2Wrapper.kt  CameraCaptureService.kt  CameraModels.kt  FrameProcessor.kt  ICameraCapture.kt
android/app/src/main/java/com/vi/slam/android/data/: CalibrationRepository.kt  DataManager.kt  IDataDestination.kt  IDataManager.kt  Session.kt  SessionRepository.kt  SettingsRepository.kt
android/app/src/main/java/com/vi/slam/android/recorder/: CsvRecovery.kt  IRecorder.kt  LocalRecorder.kt  Mp4Recovery.kt  README.md  RecorderModels.kt  SessionStateManager.kt
android/app/src/main/java/com/vi/slam/android/sensor/: IIMUCapture.kt  IMUCaptureService.kt  IMUCircularBuffer.kt  IMUSample.kt  SensorException.kt  TimestampSynchronizer.kt
android/app/src/main/java/com/vi/slam/android/streaming/: BitrateController.kt  DataChannelMetadataSender.kt  FrameMetadata.kt  IceServerConfig.kt  ImuData.kt  README.md  SignalingClient.kt  SignalingModels.kt  StreamingExceptions.kt  UdpImuStreamer.kt  VideoEncoder.kt  WebRtcClient.kt  WebRtcConnectionManager.kt  WebRtcVideoTrack.kt
android/app/src/main/java/com/vi/slam/android/ui/: MainScreen.kt  (+10 more)
android/app/src/main/res/values/: strings.xml  themes.xml
config/: android_config.yaml  basalt.yaml  openvins.yaml  orbslam3.yaml  pc_client_config.yaml  vins_mono.yaml
docker/: Dockerfile.dev  README.md  docker-compose.yml
docs/: PRD.kr.md  PRD.md  SDS.kr.md  SDS.md  SRS.kr.md  SRS.md  comprehensive_analysis.kr.md  comprehensive_analysis.md  trajectory_export_verification.md
docs/reference/: 00_project_overview.kr.md  00_project_overview.md  01_vi_slam_overview.kr.md  01_vi_slam_overview.md  02_smartphone_data_collection.kr.md  02_smartphone_data_collection.md  03_streaming_protocols.kr.md  03_streaming_protocols.md  04_calibration_synchronization.kr.md  04_calibration_synchronization.md  05_vislam_frameworks.kr.md  05_vislam_frameworks.md  06_android_camera2_api.kr.md  06_android_camera2_api.md  07_android_sensor_api.kr.md  07_android_sensor_api.md  08_ios_avfoundation_coremotion.kr.md  08_ios_avfoundation_coremotion.md  09_timestamp_synchronization.kr.md  09_timestamp_synchronization.md  10_data_format_streaming.kr.md  10_data_format_streaming.md  11_app_development_guide.kr.md  11_app_development_guide.md  12_smartphone_imu_drift.kr.md  12_smartphone_imu_drift.md  13_imu_advanced_considerations.kr.md  13_imu_advanced_considerations.md  14_vins_mono_smartphone_config.kr.md  14_vins_mono_smartphone_config.md  15_openvins_smartphone_config.kr.md  15_openvins_smartphone_config.md  16_orbslam3_smartphone_config.kr.md  16_orbslam3_smartphone_config.md  17_basalt_smartphone_config.kr.md  17_basalt_smartphone_config.md  18_framework_selection_guide.kr.md  18_framework_selection_guide.md  19_calibration_practical_guide.kr.md  19_calibration_practical_guide.md
include/common/: logging.hpp  types.hpp
include/slam/: i_slam_framework.hpp  slam_engine.hpp
include/slam/adapters/: basalt_adapter.hpp  openvins_adapter.hpp  orbslam3_adapter.hpp  vins_mono_adapter.hpp
include/slam/output/: pointcloud_exporter.hpp  ros_publisher.hpp  tf_publisher.hpp  trajectory_exporter.hpp  zmq_publisher.hpp
include/visualizer/: i_visualizer.hpp  visualizer.hpp
pc_client/: .gitignore  CMakeLists.txt
pc_client/include/: webrtc_receiver.hpp
pc_client/include/config/: settings.hpp
pc_client/include/ui/: config_panel.hpp  connection_panel.hpp  export_panel.hpp  framework_panel.hpp  stats_panel.hpp  visualization_panel.hpp
pc_client/include/visualizer/: camera_controller.hpp  point_cloud_renderer.hpp  renderer.hpp  status_overlay.hpp  trajectory_renderer.hpp
pc_client/python/: README.md  requirements.txt  signaling_server.py  test_signaling_server.py
pc_client/src/: main.cpp  webrtc_receiver.cpp
pc_client/src/config/: settings.cpp
pc_client/src/ui/: config_panel.cpp  connection_panel.cpp  export_panel.cpp  framework_panel.cpp  stats_panel.cpp  visualization_panel.cpp
pc_client/src/visualizer/: camera_controller.cpp  point_cloud_renderer.cpp  renderer.cpp  status_overlay.cpp  trajectory_renderer.cpp
pc_client/tests/: test_webrtc_receiver.cpp
pc_client/tests/visualizer/: test_camera_controller.cpp  test_point_cloud_renderer.cpp  test_renderer.cpp  test_status_overlay.cpp  test_trajectory_renderer.cpp
scripts/: build_android.sh  build_pc_client.sh  setup_python_env.sh
src/common/: logging.cpp
src/slam/: slam_engine.cpp
src/slam/adapters/: basalt_adapter.cpp  openvins_adapter.cpp  orbslam3_adapter.cpp  vins_mono_adapter.cpp
src/slam/output/: pointcloud_exporter.cpp  ros_publisher.cpp  tf_publisher.cpp  trajectory_exporter.cpp  zmq_publisher.cpp
src/visualizer/: visualizer.cpp
tests/: CMakeLists.txt  test_basalt_adapter.cpp  test_openvins_adapter.cpp  test_orbslam3_adapter.cpp  test_slam_engine.cpp  test_vins_mono_adapter.cpp
tests/e2e/: CMakeLists.txt  README.md  e2e_test_fixture.cpp  e2e_test_fixture.hpp  latency_measurement.cpp  latency_measurement.hpp  run_e2e_tests.sh  test_basic_streaming.cpp  test_euroc_benchmark.cpp  test_framework_comparison.cpp  test_stability.cpp
tests/slam/output/: test_pointcloud_exporter.cpp  test_ros_publisher.cpp  test_tf_publisher.cpp  test_trajectory_exporter.cpp  test_zmq_publisher.cpp
tests/visualizer/: test_visualizer.cpp
vocab/: README.md
(+25 files in other folders)
